hphp/test/zend/good/Zend/tests/call_user_func_002.php.expectf

Warning: Invalid argument: function: class not found in %s/call_user_func_002.php on line 4

Warning: Invalid argument: function: class not found in %s/call_user_func_002.php on line 5

Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: foo' in %s/call_user_func_002.php:6
Stack trace:
%A
